--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boilerplate",
+  "name": "rgba-to-hexa-tool",
   "version": "1.0.0",
-  "description": "Minimal setup for react with webpack",
+  "description": "Minimal online tool to convert rgba to hex with transparency",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,9 +15,8 @@
     "url": "git+https://github.com/Shenato/react-boilerplate.git"
   },
   "keywords": [
-    "Boilerplate",
-    "React",
-    "Webpack"
+    "Conversion tool",
+    "Colors"
   ],
   "author": "Omar ElGaml",
   "license": "ISC",
@@ -33,15 +32,10 @@
     "dotenv": "^7.0.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.0.2",
-    "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "minireset.css": "0.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-lazyload": "^3.0.0",
-    "react-redux": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
     "style-loader": "^0.23.1",
     "styled-components": "^4.4.1",
     "svg-inline-loader": "^0.8.0",
